// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Settings: Match Snapshots 1 1`] = `
<ScrollViewMock
  style={
    Array [
      Object {
        "flex": 1,
      },
      Object {
        "backgroundColor": "#FFF",
      },
    ]
  }
>
  <AppHeader
    navigation={[MockFunction]}
    theme={
      Object {
        "background": "#FFF",
        "color": "#17212D",
        "isDark": false,
      }
    }
  />
  <View>
    <Connect(Themes)
      theme={
        Object {
          "background": "#FFF",
          "color": "#17212D",
          "isDark": false,
        }
      }
    />
    <Support
      background="#FFF"
      color="#17212D"
    />
    <About
      background="#FFF"
      color="#17212D"
    />
  </View>
</ScrollViewMock>
`;

exports[`Settings: Match Snapshots 2 1`] = `
<ScrollViewMock
  style={
    Array [
      Object {
        "flex": 1,
      },
      Object {
        "backgroundColor": "#17212D",
      },
    ]
  }
>
  <AppHeader
    navigation={[MockFunction]}
    theme={
      Object {
        "background": "#17212D",
        "color": "#FFF",
        "isDark": true,
      }
    }
  />
  <View>
    <Connect(Themes)
      theme={
        Object {
          "background": "#17212D",
          "color": "#FFF",
          "isDark": true,
        }
      }
    />
    <Support
      background="#17212D"
      color="#FFF"
    />
    <About
      background="#17212D"
      color="#FFF"
    />
  </View>
</ScrollViewMock>
`;
